# homework4/docs/swagger.json
@@ -22,13 +22,14 @@
                 "tags": [
                     "projects"
                 ],
+                "summary": "Get projects",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/resources.Project"
+                                "$ref": "#/definitions/common.Project"
                             }
                         }
                     }
@@ -45,6 +46,7 @@
                 "tags": [
                     "projects"
                 ],
+                "summary": "Create project",
                 "parameters": [
                     {
                         "description": "request body",
@@ -52,7 +54,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/resources.ProjectSettableFields"
+                            "$ref": "#/definitions/common.ProjectSettableFields"
                         }
                     }
                 ],
@@ -60,7 +62,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/resources.ProjectExpanded"
+                            "$ref": "#/definitions/common.ProjectExpanded"
                         },
                         "headers": {
                             "Location": {
@@ -84,6 +86,7 @@
                 "tags": [
                     "projects"
                 ],
+                "summary": "Get project",
                 "parameters": [
                     {
                         "type": "integer",
@@ -104,7 +107,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/resources.ProjectExpanded"
+                            "$ref": "#/definitions/common.ProjectExpanded"
                         }
                     }
                 }
@@ -117,6 +120,7 @@
                 "tags": [
                     "projects"
                 ],
+                "summary": "Update project",
                 "parameters": [
                     {
                         "type": "integer",
@@ -131,7 +135,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/resources.ProjectSettableFields"
+                            "$ref": "#/definitions/common.ProjectSettableFields"
                         }
                     }
                 ],
@@ -144,6 +148,7 @@
                 "tags": [
                     "projects"
                 ],
+                "summary": "Delete project",
                 "parameters": [
                     {
                         "type": "integer",
@@ -167,6 +172,7 @@
                 "tags": [
                     "columns"
                 ],
+                "summary": "Get columns",
                 "parameters": [
                     {
                         "type": "integer",
@@ -182,7 +188,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/resources.Column"
+                                "$ref": "#/definitions/common.Column"
                             }
                         }
                     }
@@ -199,6 +205,7 @@
                 "tags": [
                     "columns"
                 ],
+                "summary": "Create column",
                 "parameters": [
                     {
                         "type": "integer",
@@ -213,7 +220,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/resources.ColumnSettableFields"
+                            "$ref": "#/definitions/common.ColumnSettableFields"
                         }
                     }
                 ],
@@ -221,7 +228,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/resources.Column"
+                            "$ref": "#/definitions/common.Column"
                         },
                         "headers": {
                             "Location": {
@@ -242,6 +249,7 @@
                 "tags": [
                     "columns"
                 ],
+                "summary": "Get column",
                 "parameters": [
                     {
                         "type": "integer",
@@ -262,7 +270,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/resources.Column"
+                            "$ref": "#/definitions/common.Column"
                         }
                     }
                 }
@@ -275,6 +283,7 @@
                 "tags": [
                     "columns"
                 ],
+                "summary": "Update column",
                 "parameters": [
                     {
                         "type": "integer",
@@ -296,7 +305,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/resources.ColumnSettableFields"
+                            "$ref": "#/definitions/common.ColumnSettableFields"
                         }
                     }
                 ],
@@ -309,6 +318,7 @@
                 "tags": [
                     "columns"
                 ],
+                "summary": "Delete column",
                 "parameters": [
                     {
                         "type": "integer",
@@ -339,6 +349,7 @@
                 "tags": [
                     "columns"
                 ],
+                "summary": "Update column's position",
                 "parameters": [
                     {
                         "type": "integer",
@@ -360,7 +371,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/columns.UpdatePositionRequest"
+                            "$ref": "#/definitions/columns.UpdatePositionRequestBody"
                         }
                     }
                 ],
@@ -381,6 +392,7 @@
                 "tags": [
                     "tasks"
                 ],
+                "summary": "Create task",
                 "parameters": [
                     {
                         "type": "integer",
@@ -402,7 +414,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/resources.TaskSettableFields"
+                            "$ref": "#/definitions/common.TaskSettableFields"
                         }
                     }
                 ],
@@ -410,7 +422,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/resources.Task"
+                            "$ref": "#/definitions/common.Task"
                         },
                         "headers": {
                             "Location": {
@@ -431,6 +443,7 @@
                 "tags": [
                     "tasks"
                 ],
+                "summary": "Get task",
                 "parameters": [
                     {
                         "type": "integer",
@@ -451,7 +464,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/resources.TaskExpanded"
+                            "$ref": "#/definitions/common.TaskExpanded"
                         }
                     }
                 }
@@ -464,6 +477,7 @@
                 "tags": [
                     "tasks"
                 ],
+                "summary": "Update task",
                 "parameters": [
                     {
                         "type": "integer",
@@ -478,7 +492,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/resources.TaskSettableFields"
+                            "$ref": "#/definitions/common.TaskSettableFields"
                         }
                     }
                 ],
@@ -491,6 +505,7 @@
                 "tags": [
                     "tasks"
                 ],
+                "summary": "Delete task",
                 "parameters": [
                     {
                         "type": "integer",
@@ -514,6 +529,7 @@
                 "tags": [
                     "comments"
                 ],
+                "summary": "Get comments",
                 "parameters": [
                     {
                         "type": "integer",
@@ -529,7 +545,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/resources.Comment"
+                                "$ref": "#/definitions/common.Comment"
                             }
                         }
                     }
@@ -546,6 +562,7 @@
                 "tags": [
                     "comments"
                 ],
+                "summary": "Create comment",
                 "parameters": [
                     {
                         "type": "integer",
@@ -560,7 +577,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/resources.CommentSettableFields"
+                            "$ref": "#/definitions/common.CommentSettableFields"
                         }
                     }
                 ],
@@ -568,7 +585,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/resources.Comment"
+                            "$ref": "#/definitions/common.Comment"
                         },
                         "headers": {
                             "Location": {
@@ -589,6 +606,7 @@
                 "tags": [
                     "comments"
                 ],
+                "summary": "Get comment",
                 "parameters": [
                     {
                         "type": "integer",
@@ -609,7 +627,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/resources.Comment"
+                            "$ref": "#/definitions/common.Comment"
                         }
                     }
                 }
@@ -622,6 +640,7 @@
                 "tags": [
                     "comments"
                 ],
+                "summary": "Update comment",
                 "parameters": [
                     {
                         "type": "integer",
@@ -643,7 +662,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/resources.CommentSettableFields"
+                            "$ref": "#/definitions/common.CommentSettableFields"
                         }
                     }
                 ],
@@ -656,6 +675,7 @@
                 "tags": [
                     "comments"
                 ],
+                "summary": "Delete comment",
                 "parameters": [
                     {
                         "type": "integer",
@@ -686,6 +706,7 @@
                 "tags": [
                     "tasks"
                 ],
+                "summary": "Update task's position",
                 "parameters": [
                     {
                         "type": "integer",
@@ -700,7 +721,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/tasks.UpdatePositionRequest"
+                            "$ref": "#/definitions/tasks.UpdatePositionRequestBody"
                         }
                     }
                 ],
@@ -711,15 +732,15 @@
         }
     },
     "definitions": {
-        "columns.UpdatePositionRequest": {
+        "columns.UpdatePositionRequestBody": {
             "type": "object",
             "properties": {
                 "afterColumnId": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
-        "resources.Column": {
+        "common.Column": {
             "type": "object",
             "properties": {
                 "id": {
@@ -730,7 +751,7 @@
                 }
             }
         },
-        "resources.ColumnExpanded": {
+        "common.ColumnExpanded": {
             "type": "object",
             "properties": {
                 "id": {
@@ -742,12 +763,12 @@
                 "tasks": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/resources.TaskExpanded"
+                        "$ref": "#/definitions/common.Task"
                     }
                 }
             }
         },
-        "resources.ColumnSettableFields": {
+        "common.ColumnSettableFields": {
             "type": "object",
             "properties": {
                 "name": {
@@ -755,7 +776,7 @@
                 }
             }
         },
-        "resources.Comment": {
+        "common.Comment": {
             "type": "object",
             "properties": {
                 "id": {
@@ -766,7 +787,7 @@
                 }
             }
         },
-        "resources.CommentSettableFields": {
+        "common.CommentSettableFields": {
             "type": "object",
             "properties": {
                 "text": {
@@ -774,7 +795,7 @@
                 }
             }
         },
-        "resources.Project": {
+        "common.Project": {
             "type": "object",
             "properties": {
                 "description": {
@@ -788,13 +809,13 @@
                 }
             }
         },
-        "resources.ProjectExpanded": {
+        "common.ProjectExpanded": {
             "type": "object",
             "properties": {
                 "columns": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/resources.ColumnExpanded"
+                        "$ref": "#/definitions/common.ColumnExpanded"
                     }
                 },
                 "description": {
@@ -808,7 +829,7 @@
                 }
             }
         },
-        "resources.ProjectSettableFields": {
+        "common.ProjectSettableFields": {
             "type": "object",
             "properties": {
                 "description": {
@@ -819,7 +840,7 @@
                 }
             }
         },
-        "resources.Task": {
+        "common.Task": {
             "type": "object",
             "properties": {
                 "column_id": {
@@ -839,7 +860,7 @@
                 }
             }
         },
-        "resources.TaskExpanded": {
+        "common.TaskExpanded": {
             "type": "object",
             "properties": {
                 "column_id": {
@@ -848,7 +869,7 @@
                 "comments": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/resources.Comment"
+                        "$ref": "#/definitions/common.Comment"
                     }
                 },
                 "description": {
@@ -865,7 +886,7 @@
                 }
             }
         },
-        "resources.TaskSettableFields": {
+        "common.TaskSettableFields": {
             "type": "object",
             "properties": {
                 "description": {
@@ -876,14 +897,14 @@
                 }
             }
         },
-        "tasks.UpdatePositionRequest": {
+        "tasks.UpdatePositionRequestBody": {
             "type": "object",
             "properties": {
                 "after_task_id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "new_column_id": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         }
