# homework4/resources/comments/comments.go
@@ -2,61 +2,59 @@ package comments
 
 import (
 	"github.com/AndreyKlimchuk/golang-learning/homework4/db"
-	rsrc "github.com/AndreyKlimchuk/golang-learning/homework4/resources"
+	"github.com/AndreyKlimchuk/golang-learning/homework4/resources/common"
 )
 
 type CreateRequest struct {
-	TaskId rsrc.Id
-	rsrc.CommentSettableFields
+	TaskId common.Id
+	common.CommentSettableFields
 }
 
 type ReadRequest struct {
-	TaskId    rsrc.Id
-	CommentId rsrc.Id
+	TaskId    common.Id
+	CommentId common.Id
 }
 
 type ReadCollectionRequest struct {
-	TaskId rsrc.Id
+	TaskId common.Id
 }
 
 type UpdateRequest struct {
-	TaskId    rsrc.Id
-	CommentId rsrc.Id
-	rsrc.CommentSettableFields
+	TaskId    common.Id
+	CommentId common.Id
+	common.CommentSettableFields
 }
 
 type DeleteRequest struct {
-	ProjectId rsrc.Id
-	ColumnId  rsrc.Id
-	TaskId    rsrc.Id
-	CommentId rsrc.Id
+	TaskId    common.Id
+	CommentId common.Id
 }
 
 func (r CreateRequest) Handle() (interface{}, error) {
 	_, err := db.Query().Tasks().Get(r.TaskId)
 	if err != nil {
-		return rsrc.Comment{}, rsrc.NewNotFoundOrInternalError("cannot get task", err)
+		return common.Comment{}, common.NewNotFoundOrInternalError("cannot get task", err)
 	}
 	comment, err := db.Query().Comments().Create(r.TaskId, r.Text)
-	return comment, rsrc.MaybeNewInternalError("cannot create comment", err)
+	return comment, common.MaybeNewInternalError("cannot create comment", err)
 }
 
 func (r ReadRequest) Handle() (interface{}, error) {
 	comment, err := db.Query().Comments().Get(r.TaskId, r.CommentId)
-	return comment, rsrc.MaybeNewNotFoundOrInternalError("cannot get comment", err)
+	return comment, common.MaybeNewNotFoundOrInternalError("cannot get comment", err)
 }
 
 func (r ReadCollectionRequest) Handle() (interface{}, error) {
 	comments, err := db.Query().Comments().GetMultiple(r.TaskId)
-	return comments, rsrc.MaybeNewInternalError("cannot read comments", err)
+	return comments, common.MaybeNewInternalError("cannot read comments", err)
 }
 
 func (r UpdateRequest) Handle() (interface{}, error) {
 	err := db.Query().Comments().Update(r.TaskId, r.CommentId, r.Text)
-	return nil, rsrc.MaybeNewNotFoundOrInternalError("cannot update comment", err)
+	return nil, common.MaybeNewNotFoundOrInternalError("cannot update comment", err)
 }
 
 func (r DeleteRequest) Handle() (interface{}, error) {
 	err := db.Query().Comments().Delete(r.TaskId, r.CommentId)
-	return nil, rsrc.MaybeNewNotFoundOrInternalError("cannot delete comment", err)
+	return nil, common.MaybeNewNotFoundOrInternalError("cannot delete comment", err)
 }
